--- a/AI_w_Python_Test3.ipynb
+++ b/AI_w_Python_Test3.ipynb
@@ -326,7 +326,7 @@
         "# Main function to orchestrate the workflow\n",
         "def main():\n",
         "    # Provide your YouTube Data API key here\n",
-        "    api_key = 'AIzaSyCjr-StcK8we39XIkEos1wVgN2siKsqVBw'\n",
+        "    api_key = ''\n",
         "\n",
         "    while True:\n",
         "        # Prompt user for search query, max results, and minimum likes\n",
